@@ -1,5 +1,5 @@
 /* ValidationConsumer.java -- 
-   Copyright (C) 1999,2000,2001 Free Software Foundation, Inc.
+   Copyright (C) 1999,2000,2001, 2005 Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -1323,7 +1323,8 @@ public final class ValidationConsumer extends EventFilter
     // Content model validation
     //
 
-    static private final Recognizer	ANY = new Recognizer (null);
+    // GCJ LOCAL: package private to work around gcj bug.
+    static final Recognizer	ANY = new Recognizer (null);
 
 
     // Base class defines the calls used to validate content,
